Fix mobile password form view + fix hero heading spacing

--- a/src/styles/globalNav.css
+++ b/src/styles/globalNav.css
@@ -137,4 +137,8 @@
         align-items: center;
         padding: var(--spacing-40) 0;
     }
+
+    .header-link > .three-dots-vertical {
+        display: none;
+    }
 }
