--- a/src/styles/passwordForm.css
+++ b/src/styles/passwordForm.css
@@ -48,11 +48,12 @@
 
 @media screen and (max-width: 768px){
   
-  .form-Inputs {
+  .form-body {
     flex-direction: column;
+    align-items: stretch;
   }
 
-  .input-field {
+  .form-input-field {
     min-width: 5px;
 }
 }
