--- a/src/styles/portfolioHome.css
+++ b/src/styles/portfolioHome.css
@@ -4,6 +4,12 @@
     height: 160px;
 }
 
+.hero-heading-container {
+    display: flex;
+    flex-direction: column;
+    gap: var(--spacing-30);
+}
+
 .card-container {
     display: flex;
     flex-wrap: wrap;
