--- a/src/styles/threeDots.css
+++ b/src/styles/threeDots.css
@@ -91,5 +91,4 @@
     display: flex;
     gap: 8px;
     align-items: center;
-    justify-content: center;
 }
